--- a/BowlingCoreMVC/Views/Shared/Error.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Error.cshtml
@@ -5,6 +5,13 @@
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
+<br /><br /><br />
+@if (!string.IsNullOrEmpty((string)ViewData["Message"]))
+{
+    <h2 class="text-danger">@ViewData["Message"].ToString()</h2>
+}
+
+<br />
 
 @if (Model.ShowRequestId)
 {
