--- a/BowlingCoreMVC/Views/Leagues/Create.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Create.cshtml
@@ -52,9 +52,9 @@
             <div class="form-group">
                 <label asp-for="LeagueDay" class="control-label"></label>
                 <select asp-for="LeagueDay" asp-items="@Model.Days" class="form-control" id="ddlDays">
-                    <option value="0">---Location---</option>
+                    @*<option value="10" selected="selected">---League Day---</option>*@
                 </select>
-                <span asp-validation-for="LocationID" class="text-danger"></span>
+                <span asp-validation-for="LeagueDay" class="text-danger"></span>
             </div>
 
             <div class="form-group">
