--- a/BowlingCoreMVC/Views/Shared/Components/GameDetails/Default.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Components/GameDetails/Default.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<partial name="CondensedScoreboard" model="Model" />
+<partial name="_CondensedScoreboard" model="Model" />
 
 <div class="row">
     @foreach (var f in Model.Frames)
