--- a/BowlingCoreMVC/Views/Shared/Error.cshtml
+++ b/BowlingCoreMVC/Views/Shared/Error.cshtml
@@ -4,11 +4,11 @@
 }
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-<br /><br /><br />
-@if (!string.IsNullOrEmpty((string)ViewData["Message"]))
+@*<h2 class="text-danger">An error occurred while processing your request.</h2>*@
+<br />
+@if (!string.IsNullOrEmpty(Model.Message))
 {
-    <h2 class="text-danger">@ViewData["Message"].ToString()</h2>
+    <h2 class="text-danger">@Model.Message</h2>
 }
 
 <br />
