--- a/BowlingCoreMVC/Views/Shared/_CondensedScoreboard.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_CondensedScoreboard.cshtml
@@ -1,63 +1,230 @@
 ﻿@model BowlingCoreMVC.Models.Game
 
-@{Model.Frames = Model.Frames.OrderBy(f => f.FrameNum).ToList(); }
+@{var frames = Model.Frames.OrderBy(f => f.FrameNum).ToList(); }
 
 
-    <div class="flex-row scoreboard force-flex">
-        @foreach (var f in Model.Frames)
-        {
-            <div class="flex-column scoreboard-frame">
-                <div class="d-flex flex-row scoreboard-framenum bg-dark">
-                    <div class="extra-pad">@f.FrameNum</div>
-                </div>
-
-                <div class="d-flex flex-row scoreboard-row">
-                    <div class="flex-fill extra-pad">@f.ThrowOneScore</div>
-                    <div class="flex-fill extra-pad">@f.ThrowTwoScore</div>
-                    @if (f.FrameNum == 10)
-                    {
-                        <div class="flex-fill extra-pad">@f.ThrowThreeScore</div>
-                    }
-                </div>
-
-                <div class="d-flex flex-row scoreboard-framescore extra-pad">
-                    <div class="extra-pad">@f.FrameTotal</div>
-                </div>
-
-                @*<div class="d-flex flex-row scoreboard-row">
-                        <div class="flex-fill"><frame-throw frame="@f" throw-num="1"></frame-throw></div>
-
-                        <div class="flex-fill"><frame-throw frame="@f" throw-num="2"></frame-throw></div>
-
-
-
-                        @if (f.FrameNum == 10)
-                        {
-                            <div class="flex-fill"><frame-throw frame="@f" throw-num="3"></frame-throw></div>
-                        }
-
-
-                    </div>
-
-
-
-                    <div class="d-flex flex-row scoreboard-framescore">
-                        <frame-score frame="@f"></frame-score>
-                    </div>*@
+<div class="flex-row force-flex">
+    @foreach (var f in frames)
+    {
+        <div class="flex-column scoreboard-frame">
+            <div class="d-flex flex-row scoreboard-framenum bg-dark">
+                <div class="extra-pad">@f.FrameNum</div>
             </div>
 
-        }
-    </div>
+            <div class="d-flex flex-row scoreboard-row">
+                @if (f.FrameNum != 10)
+                {
+                    @if (f.ThrowOneScore == 10)
+                    {
+                        <div class="flex-fill extra-pad">
+                            <label>X</label>
+                        </div>
+                    }
+                    else if (f.ThrowOneScore + f.ThrowTwoScore == 10)
+                    {
+                        <div class="flex-fill extra-pad">
+                            <label>
+                                @if (f.ThrowOneScore == 0)
+                                {<text>-</text>}
+                            else
+                            {@f.ThrowOneScore}
+                            </label>
+                            @*<label id='@string.Format("{0}_{1}_{2}_lblFrame",f.GameID,f.FrameNum,"1")'>@f.ThrowOneScore</label>*@
+                        </div>
+                        <div class="flex-fill extra-pad">
+                            <label>
+                                /
+                            </label>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="flex-fill extra-pad">
+                            <label>
+                                @if (f.ThrowOneScore == 0)
+                                {<text>-</text>}
+                            else
+                            {@f.ThrowOneScore}
+                            </label>
+                            @*<label id='@string.Format("{0}_{1}_{2}_lblFrame",f.GameID,f.FrameNum,"1")'>@f.ThrowOneScore</label>*@
+                        </div>
+                        <div class="flex-fill extra-pad">
+                            <label>
+                                @if (f.ThrowTwoScore == 0)
+                                {<text>-</text>}
+                            else
+                            {@f.ThrowTwoScore}
+                            </label>
+                        </div>
+                    }
+                }
+                else if (f.FrameNum == 10)
+                {
+                    if (f.ThrowOneScore == 10)
+                    {
+                        <div class="flex-fill extra-pad">
+                            <label>X</label>
+                        </div>
+                        if (f.ThrowTwoScore == 10)
+                        {
+                            <div class="flex-fill extra-pad">
+                                <label>X</label>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="flex-fill extra-pad">
+                                <label>
+                                    @if (f.ThrowTwoScore == 0)
+                                    {<text>-</text>}
+                                else
+                                {@f.ThrowTwoScore}
+                                </label>
+                            </div>
+                        }
+                    }
+                    else if (f.ThrowOneScore + f.ThrowTwoScore == 10)
+                    {
+                        <div class="flex-fill extra-pad">
+                            <label>
+                                @if (f.ThrowOneScore == 0)
+                                {<text>-</text>}
+                            else
+                            {@f.ThrowOneScore}
+                            </label>
+                            @*<label id='@string.Format("{0}_{1}_{2}_lblFrame",f.GameID,f.FrameNum,"1")'>@f.ThrowOneScore</label>*@
+                        </div>
+                        <div class="flex-fill extra-pad">
+                            <label>
+                                /
+                            </label>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="flex-fill extra-pad">
+                            <label>
+                                @if (f.ThrowOneScore == 0)
+                                {<text>-</text>}
+                            else
+                            {@f.ThrowOneScore}
+                            </label>
+                            @*<label id='@string.Format("{0}_{1}_{2}_lblFrame",f.GameID,f.FrameNum,"1")'>@f.ThrowOneScore</label>*@
+                        </div>
+                        <div class="flex-fill extra-pad">
+                            <label>
+                                @if (f.ThrowTwoScore == 0)
+                                {<text>-</text>}
+                            else
+                            {@f.ThrowTwoScore}
+                            </label>
+                        </div>
+                    }
+
+                    if (f.ThrowThreeScore == 10)
+                    {
+                        <div class="flex-fill extra-pad">
+                            <label>X</label>
+                        </div>
+                    }
+                    else if (f.ThrowTwoScore + f.ThrowThreeScore == 10)
+                    {
+                        if (f.ThrowOneScore < 10)
+                        {
+                            <div class="flex-fill extra-pad">
+                                <label>
+                                    @f.ThrowThreeScore
+                                </label>
+                            </div>
+                        }
+                        else if (f.ThrowThreeScore != 0)
+                        {
+                            <div class="flex-fill extra-pad">
+                                <label>/</label>
+                            </div>
+                        }
+                        else if (f.ThrowThreeScore == 0)
+                        {
+                            <div class="flex-fill extra-pad">
+                                <label>
+                                    @if (f.ThrowThreeScore == 0)
+                                    {<text>-</text>}
+                                else
+                                {@f.ThrowThreeScore}
+                                </label>
+                            </div>
+                        }
+                    }
+                    else
+                    {
+                        <div class="flex-fill extra-pad">
+                            <label>
+                                @if (f.ThrowThreeScore == 0)
+                                {<text>-</text>}
+                            else
+                            {@f.ThrowThreeScore}
+                            </label>
+                        </div>
+                    }
+
+                    @*if (f.ThrowThreeScore == 0)
+            {
+                <div class="flex-fill extra-pad">
+                    <label>
+                        @if (f.ThrowThreeScore == 0)
+                        {<text>-</text>}
+                    else
+                    {@f.ThrowThreeScore}
+                    </label>
+                </div>
+            }*@
+                }
+            </div>
+
+            <div class="d-flex flex-row scoreboard-framescore extra-pad">
+                <div class="extra-pad">@f.FrameTotal</div>
+            </div>
+
+            @*<div class="d-flex flex-row scoreboard-row">
+                    <div class="flex-fill"><frame-throw frame="@f" throw-num="1"></frame-throw></div>
+
+                    <div class="flex-fill"><frame-throw frame="@f" throw-num="2"></frame-throw></div>
+
+                    @if (f.FrameNum == 10)
+                    {
+                        <div class="flex-fill"><frame-throw frame="@f" throw-num="3"></frame-throw></div>
+                    }
+
+
+                </div>
+
+                <div class="d-flex flex-row scoreboard-framescore">
+                    <frame-score frame="@f"></frame-score>
+                </div>*@
+        </div>
+
+    }
+</div>
 
 <style>
     .extra-pad {
         padding: 5px;
         padding-bottom: 10px;
     }
+
     .no-wrap {
         flex-shrink: 0;
     }
+
     .force-flex {
         display: flex;
     }
 </style>
+
+<environment include="Development">
+    <script src="~/js/editgame.js" asp-append-version="true"></script>
+</environment>
+
+<environment exclude="Development">
+    <script src="~/js/editgame.min.js" asp-append-version="true"></script>
+</environment>
