--- a/BowlingCoreMVC/Views/Series/Edit.cshtml
+++ b/BowlingCoreMVC/Views/Series/Edit.cshtml
@@ -19,7 +19,8 @@
 
 @foreach (var g in Model.Games)
 {
-    @await Component.InvokeAsync("EditGame", new { GameID = g.ID })
+    @*@await Component.InvokeAsync("EditGame", new { GameID = g.ID })*@
+    @await Component.InvokeAsync("EditGame", new { Game = g })
 
 }
 
