--- a/BowlingCoreMVC/Views/Shared/_LoginPartial.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
       id="logoutForm" class="navbar-right">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="nav-link">
+            <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="btn btn-link navbar-btn nav-link">
                 Hello @UserManager.GetUserName(User)!
             </a>
         </li>
