removed old teams controller and views and regenerated them

--- a/BowlingCoreMVC/Views/Shared/_Layout.cshtml
+++ b/BowlingCoreMVC/Views/Shared/_Layout.cshtml
@@ -106,6 +106,7 @@
 *@
             <li class="nav-item"><a asp-controller="Leagues" asp-action="Index" class="nav-link">Leagues</a>
             <li class="nav-item"><a asp-controller="Stats" asp-action="Index" class="nav-link">Sitewide Scores</a>
+            <li class="nav-item"><a asp-controller="Teams" asp-action="Index" class="nav-link">Teams Test</a>
             </ul>
             
             @await Html.PartialAsync("_LoginPartial")
