league create, league default values, listgroup testing

--- a/BowlingCoreMVC/Views/Home/Index.cshtml
+++ b/BowlingCoreMVC/Views/Home/Index.cshtml
@@ -17,3 +17,70 @@
         </div>
     </div>
 </div>
+
+@*TODO: Revamped home page for logged in user*@
+
+<h1>Test listgroup partial</h1>
+
+<div class="border-primary">
+    <ul class="list-group w-25 border-primary">
+        <li class="list-group-item">Cras justo odio<small class="float-right">123</small></li>
+        <li class="list-group-item">Dapibus ac facilisis in<span class="badge badge-primary badge-pill float-right">14</span></li>
+        <li class="list-group-item">Morbi leo risus</li>
+        <li class="list-group-item">Porta ac consectetur ac</li>
+        <li class="list-group-item">Vestibulum at eros</li>
+    </ul>
+</div>
+
+
+<div class="card text-white bg-secondary w-50">
+    <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <h6 class="card-subtitle mb-2">Card subtitle</h6>
+        <ul class="list-group w-100 border-primary">
+            <li class="list-group-item text-black-50">Cras justo odio<small class="float-right">123</small></li>
+            <li class="list-group-item text-black-50">Dapibus ac facilisis in<span class="badge badge-primary badge-pill float-right">14</span></li>
+            <li class="list-group-item">Morbi leo risus</li>
+            <li class="list-group-item">Porta ac consectetur ac</li>
+            <li class="list-group-item">Vestibulum at eros</li>
+        </ul>
+    </div>
+</div>
+
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+        <table class="table table-sm">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>mdo</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>fat</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Larry</td>
+                    <td>the Bird</td>
+                    <td>twitter</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
