--- a/BowlingCoreMVC/Views/Leagues/Details.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Details.cshtml
@@ -119,45 +119,40 @@
 </div>
 
 
-@*
-    <div>
-        <h4>League</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Name)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.Name)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.StartDate)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.StartDate)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.EndDate)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.EndDate)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.CreatedDate)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.CreatedDate)
-            </dd>
-            <dt>
-                @Html.DisplayNameFor(model => model.ModifiedDate)
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.ModifiedDate)
-            </dd>
-        </dl>
-    </div>
-    <div>
-        <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-        <a asp-action="Index">Back to List</a>
-    </div>
+<hr />
+
+<h1>Teams</h1>
+
+<a class="btn btn-primary" asp-action="Create" asp-controller="Teams" asp-route-LeagueID="@Model.ID" asp->New Team</a>
+<br /><br />
+
+@* This teams list should also reflect what a league sheet looks like:
+
+    Team Name
+        Member 1 ______  Avg ______ last week game 1, 2, 3, total
+        Member 2 ______  Avg ______ last week game 1, 2, 3, total
+        Member 3 ______  Avg ______ last week game 1, 2, 3, total
+        Member 4 ______  Avg ______ last week game 1, 2, 3, total
+        Member 5 ______  Avg ______ last week game 1, 2, 3, total
+
 *@
+
+<div class="card-deck">
+    @foreach (Team t in (List<Team>)ViewData["Teams"])
+    {
+        @*this worked for an a tag: href="@Url.Action("Edit", "Teams", new { ID = t.ID })"*@
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">@t.TeamName</h5>
+                <p class="card-text">Team members and their averages/scores go here.</p>
+                <div class="card-footer">
+                    @* IF CURRENT USER IS NOT ON ANY TEAM*@
+                    <button type="button" class="btn btn-secondary">Request to Join</button>
+                </div>
+            </div>
+            
+
+        </div>
+    }
+</div>
+
