--- a/BowlingCoreMVC/Views/Leagues/Edit.cshtml
+++ b/BowlingCoreMVC/Views/Leagues/Edit.cshtml
@@ -28,6 +28,12 @@
                 <span asp-validation-for="LocationID" class="text-danger"></span>
             </div>
 
+            <div class="form-group" id="grpDefaultNumOfGames">
+                <label asp-for="DefaultNumOfGames" class="control-label"></label>
+                <input asp-for="DefaultNumOfGames" class="form-control" id="NumOfGames" min="2" max="9" />
+                <span asp-validation-for="DefaultNumOfGames" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
                 <input asp-for="StartDate" class="form-control" />
@@ -45,6 +51,12 @@
                     @*<option value="10">---League Day---</option>*@
                 </select>
                 <span asp-validation-for="LeagueDay" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Occurance" class="control-label"></label>
+                <select asp-for="Occurance" asp-items="@Model.Occurances" class="form-control"></select>
+                <span asp-validation-for="Occurance" class="text-danger"></span>
             </div>
 
             <div class="form-group">
