--- a/BowlingCoreMVC/Views/Teams/Create.cshtml
+++ b/BowlingCoreMVC/Views/Teams/Create.cshtml
@@ -15,27 +15,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="LeagueID" class="control-label"></label>
-                <select asp-for="LeagueID" class ="form-control" asp-items="ViewBag.LeagueID"></select>
+                <select asp-for="LeagueID" class ="form-control" asp-items="@Model.Leagues"></select>
             </div>
             <div class="form-group">
                 <label asp-for="TeamName" class="control-label"></label>
                 <input asp-for="TeamName" class="form-control" />
                 <span asp-validation-for="TeamName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedByID" class="control-label"></label>
-                <input asp-for="CreatedByID" class="form-control" />
-                <span asp-validation-for="CreatedByID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ModifiedDate" class="control-label"></label>
-                <input asp-for="ModifiedDate" class="form-control" />
-                <span asp-validation-for="ModifiedDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
